# solana-security-reference

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
docs/: DEEP_DIVE.md
programs/attacker/: Cargo.toml
programs/attacker/src/: lib.rs
programs/solana-security-reference/: Cargo.toml
programs/solana-security-reference/src/: lib.rs
programs/solana-security-reference/src/secure/: incorrect_owner_check.rs  insecure_cpi.rs  integer_overflow.rs  missing_signer_check.rs  type_cosplay.rs
programs/solana-security-reference/src/vulnerable/: incorrect_owner_check.rs  insecure_cpi.rs  integer_overflow.rs  missing_signer_check.rs  type_cosplay.rs
src/01-missing-signer-check/: README.md  secure.rs  vulnerable.rs
src/02-incorrect-owner-check/: README.md  secure.rs  vulnerable.rs
src/03-insecure-cpi/: README.md  secure.rs  vulnerable.rs
src/04-integer-overflow/: README.md  secure.rs  vulnerable.rs
src/05-type-cosplay/: README.md  secure.rs  vulnerable.rs
tests/: 01-missing-signer-check.ts  02-incorrect-owner-check.ts  03-insecure-cpi.ts  04-integer-overflow.ts  05-type-cosplay.ts
